...
                    }else{
                        Text("\(t.year) \(t.segment)")
                    }
                }
            }
        }
        .navigationTitle("Term List")
            .navigationBarTitleDisplayMode(.inline)
            .toolbar{
                ToolbarItem(placement: .navigationBarTrailing){

                    Button{
                        resultTerm = selectedTerm
                        dismiss()
                    }label: {
                        Text("Select")
                    }
                    .disabled(!termSelected())

                }
                ToolbarItem(placement: .bottomBar){
                    HStack{
...
