...
                    //start date 1st->4-8, 2nd->9-n.y. 3
                    DatePicker("StartDate",selection: $startDate,in:termRange(),
                               displayedComponents: [.date])
                }
                
            }
        }.navigationTitle("New Term")
            .navigationBarTitleDisplayMode(.inline)
            .toolbar{
                ToolbarItem(placement: .navigationBarTrailing){
                    Button{
                        if let _ = itemToEdit{
                            UpdateTerm()
                        }else{
                            AddTerm()
                        }
                        dismiss()
                    }label: {
                        Text("Save")
                    }
                    .disabled(!TermFullfilled())
                }
            }
        
        .alert(item: $errorForAlert) { error in
...
